<resources>
    <string name="app_name">CommerceApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="products">Products</string>
    <string name="coupouns">Coupouns</string>
    <string name="me">Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_your_product">Manage Your Product</string>
    <string name="count">Count</string>
    <string name="number">40</string>
    <string name="manage_your_coupons">Manage Your Coupons</string>
    <string name="manage_your_inventory">Manage Your Inventory</string>
    <string name="inventory">Inventory</string>
    <string name="title">Title</string>
    <string name="brand">Brand:</string>
    <string name="price">Price</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="product_type">Product Type</string>
    <string name="description">Description</string>
    <string name="add_picture_to_product">Add picture to Product</string>
    <string name="add_product">Add Product</string>
    <string name="product_details">Product Details</string>
    <string name="edit_product">Edit Product</string>
    <string name="vender">Vender</string>
    <string name="number1">1</string>
    <string name="today">"1 Jan "</string>
    <string name="code_Name">Code Name</string>
    <string name="value">Value</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="edit_coupon">Edit Coupon</string>
    <string name="images_of_product">Images of Product</string>
    <string name="add_image">Add Image</string>
    <string name="start_date">From</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="color">Color</string>
    <string name="product_type1">Product Type</string>
    <string name="mohamed">Mohamed</string>
    <string name="email">Email: Mohamedhassan199489@gmail.com</string>
    <string name="phone">Phone: 01202010</string>
    <string name="position">Position: SuperUser</string>
    <string name="hello">Hello,   Mohamed</string>
    <string name="start_manage_your_bussiness">Start Manage Your Bussiness</string>
    <string name="image_url">Image Url</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="user_name">user Name</string>
    <string name="password">Password</string>
    />
</resources>