<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editcoupon.view.EditCouponFragment" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_code_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/code_Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_code_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="code"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_code_edit_name"
                app:layout_constraintStart_toEndOf="@+id/tv_code_edit_name"
                app:layout_constraintTop_toTopOf="@+id/tv_code_edit_name" />

            <TextView
                android:id="@+id/tv_code_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/value"
                app:layout_constraintStart_toStartOf="@+id/tv_code_edit_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_code_edit_name" />

            <EditText
                android:id="@+id/et_code_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/value"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_code_value"
                app:layout_constraintStart_toStartOf="@+id/et_code_name"
                app:layout_constraintTop_toTopOf="@+id/tv_code_value" />

            <TextView
                android:id="@+id/tv_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/from"
                app:layout_constraintStart_toStartOf="@+id/tv_code_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_code_value" />

            <EditText
                android:id="@+id/et_from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/today"
                android:inputType="date"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_from"
                app:layout_constraintStart_toStartOf="@+id/et_code_value"
                app:layout_constraintTop_toTopOf="@+id/tv_from" />

            <TextView
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/to"
                app:layout_constraintStart_toStartOf="@+id/tv_from"
                app:layout_constraintTop_toBottomOf="@+id/tv_from" />

            <EditText
                android:id="@+id/editTextDate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/today"
                android:inputType="date"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_to"
                app:layout_constraintStart_toStartOf="@+id/et_from_date"
                app:layout_constraintTop_toTopOf="@+id/tv_to" />

            <Button
                android:id="@+id/btn_edit_coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/edit_coupon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>